# llama.cpp_ew

./: .gitignore  convert_hf_to_gguf.py  phase1_fidelity_check.py
cmake/: build-info.cmake  git-vars.cmake
include/: llama.h
include/llamaedge/: hooks.h
src/: CMakeLists.txt  llama-context.cpp  llama-context.h  llama-kv-cache.cpp  llama-kv-cache.h  llama.cpp  llamaedge-b4-pipeline.cpp  llamaedge-frontier.cpp  llamaedge-hooks.cpp  llamaedge-internal.h  llamaedge-kv-export.cpp  llamaedge-profile.cpp  llamaedge-quant.cpp  llamaedge-thinning.cpp  llamaedge-tx-ring.cpp  llamaedge-wire-format.cpp
tests/: CMakeLists.txt  test-b3-chunk-streaming.cpp  test-b4-edgeweaver.cpp  test-b4-full.cpp  test_b4_edgeweaver.cpp  test_token_chunk.cpp
